<resources>
    <string name="app_name">FoodFlix</string>
    <string name="appVersionTxt">Version 1.0.0v</string>
    <string name="CDlogo">The FoodFlix Logo</string>
    <string name="file_provider_authority" translatable="false">com.example.foodflix</string>
    <string name="admob_app_id">ca-app-pub-5049800826221207~3193883901</string>
    <string name="admob_banner_ad_unit_id">ca-app-pub-5049800826221207/6426551906</string>
    <string name="admob_test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="please_wait">Please Wait…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="generate">Products</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="toolbar_title_generate">Add Product</string>
    <string name="toolbar_title_scan">Code Scanner</string>
    <string name="toolbar_title_history">Local History</string>
    <string name="settings">Settings</string>
    <string name="play_sound">Play Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="save_history">Save History</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="toolbar_title_generated_qr_code">Generated QR Code</string>
    <string name="code_type">Type: %s</string>
    <string name="content">Content: %s</string>
    <string name="saved_the_code_successfully">Saved the code successfully</string>
    <string name="failed_to_save_the_code">failed to save the code</string>
    <string name="failed_to_share_the_code">failed to share the code</string>
    <string name="file_name_body">%s_%s</string>
    <string name="generated_qr_code_already_exists">Generated code already exists in the local storage</string>
    <string name="share_code_using">Share code using…</string>
    <string name="flash">Flash</string>
    <string name="scan_gallery">Scan Gallery</string>
    <string name="error_occured_while_scanning">Error occurred while scanning</string>
    <string name="error_could_not_load_the_image">Could not load the image</string>
    <string name="error_did_not_find_any_content">Did not find any content. Try again with different image</string>
    <string name="toolbar_title_scan_result">Scan Result</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="created_time">Created Time: %s</string>
    <string name="scanned_qr_code_content">Scanned QR code content</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="code_scan">%s Scan</string>
    <string name="no_item">No Data Found</string>
    <string name="get_value">Get value</string>
    <string name="toolbar_title_uploaded_image">Uploaded Image</string>
    <string name="dolor_sit_amet">Dolor sit amet consectetur adipiscing elit sed do</string>
    <string name="app_version_v1_1">Food Flix App Version : 1.0.0v</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="delete">Delete</string>
    <string name="account_login">Account Login</string>
    <string name="emailField">EMAIL</string>
    <string name="emailHint">email@example.com</string>
    <string name="passwordField">PASSWORD</string>
    <string name="passwordHint">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loginBTN">Log in</string>
    <string name="registerHereTxt">Don\'t have an account? Register Here</string>
    <string name="new_user_registrationTV">New User Registration</string>
    <string name="loginhereTxt">Already have account? Login Here</string>
    <string name="create_new_accountBTN">Create New Account</string>
    <string name="diet_preferences">Diet Preferences</string>
    <string name="account_settings">Account Settings</string>
    <string name="logoutTXT">Logout</string>
    <string name="access_token" translatable="false">@string/mapbox_access_token</string>
    <string name="purple_map_style" translatable="false">mapbox://styles/mapbox/cj7bww7is2f4i2rnwyxkzpwu7</string>
    <string name="blue_map_style" translatable="false">mapbox://styles/mapbox/cj7bwwv3caf7l2spgukxm8bwv</string>
    <string name="terminal_map_style" translatable="false">mapbox://styles/mapbox/cj62n87yx3mvi2rp93sfp2w9z</string>
    <string name="map_view">Map view</string>
    <string name="failure_to_load_file">Failure to load the local file of locations. Please try reloading the app.</string>
    <string name="mock_location_title">Fake device location</string>
    <string name="select_a_theme">Tap on a theme</string>
    <string name="privacy_policyText1">
        Nilamdeen Fathima Nuzrah built the FoodFlix app as an Ad Supported app. This SERVICE is provided by Nuzrah Nilamdeen at no cost and is intended for use as is.
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service.
        I will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at FoodFlix unless otherwise defined in this Privacy Policy.
        \n\n
        Information Collection and Use
        \n\n
        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to email, password.
        The information that I request will be retained on your device and is not collected by me in any way.
        The app does use third party services that may collect information used to identify you.
        \n \n
        Link to privacy policy of third party service providers used by the app
    </string>
    <string name="privacy_policy3">
        ♦ &lt;a href=https://www.google.com/policies/privacy>Google Play Services&lt;/a>&lt;br/>
        ♦ &lt;a href=https://support.google.com/admob/answer/6128543?hl=en>AdMob&lt;/a>&lt;br/>
        ♦ &lt;a href=https://firebase.google.com/policies/analytics>Google Analytics for Firebase&lt;/a>&lt;br/>
    </string>
    <string name="privacy_policyText2">
        <b>Log Data </b>
        \n\n
        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data.
        This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
        \n\n
        <b>Service Providers</b>
        \n\n
        I may employ third-party companies and individuals due to the following reasons:
        \n\n
        *   To facilitate our Service;\n
        *   To provide the Service on our behalf;\n
        *   To perform Service-related services; or\n
        *   To assist us in analyzing how our Service is used.
        \n\n
        I want to inform users of this Service that these third parties have access to your Personal Information.
        The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
        \n\n
        <b>Security</b>
        \n\n
        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
        But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
        \n\n
        <b>Links to Other Sites</b>
        \n\n
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site.
        Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites.
        I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        \n\n
        <b>Children’s Privacy</b>
        \n\n
        These Services do not address anyone under the age of 13.
        I do not knowingly collect personally identifiable information from children under 13.
        In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
        \n\n
        <b>Changes to This Privacy Policy</b>
        \n\n
        I may update our Privacy Policy from time to time.
        Thus, you are advised to review this page periodically for any changes.
        I will notify you of any changes by posting the new Privacy Policy on this page.
        \n\n
        This policy is effective as of 2020-06-13
        \n\n
        <b>Contact Us</b>
    </string>
    <string name="privacy_policyText3">
        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at nuzrah.nilamdeen@gmail.com
    </string>
    <string name="privacy_policyText4">
        This privacy policy page was created at &lt;a href=https://privacypolicytemplate.net>privacypolicytemplate.net&lt;/a>
        and modified/generated by &lt;a href=https://app-privacy-policy-generator.firebaseapp.com>App Privacy Policy Generator&lt;/a>
    </string>
    <string name="beef">Beef</string>
    <string name="update">Update</string>
    <string name="enter_product_name">ENTER PRODUCT NAME</string>
    <string name="select_ingredients_included">Select ingredients included</string>
    <string name="peanut">Peanut</string>
    <string name="milk">Milk</string>
    <string name="wheat">Wheat</string>
    <string name="soy">Soy</string>
    <string name="shell_fish">Shell Fish</string>
    <string name="egg">Egg</string>
    <string name="fish">Fish</string>
    <string name="pork">Pork</string>
    <string name="alcohol">Alcohol</string>
    <string name="poultry">Poultry</string>
</resources>